muoni/GraalVM/language/tests/error/InvalidAssignmentInBinOp.hn
fn double(x) {
  return 2 * x;
}

fn main() {
  5 + double(2) = 4;
}